@@ -1,3 +1,8 @@
+2012-03-08	The InnoDB Team
+
+	* btr/btr0pcur.c:
+	Fix Bug#13807811 BTR_PCUR_RESTORE_POSITION() CAN SKIP A RECORD
+
 2012-02-28	The InnoDB Team
 
 	* btr/btr0btr.c, dict/dict0dict.c, include/btr0btr.h,
